[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameController.gd" type="Script" id=1]
[ext_resource path="res://menus/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/savior.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 57
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 5 )

[node name="GameController" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_right = 335.0
margin_bottom = 52.0
mouse_filter = 2

[node name="DeathUI" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouDied" type="RichTextLabel" parent="CanvasLayer/DeathUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.5
margin_top = -89.5
margin_right = 312.5
margin_bottom = 89.5
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.827451, 0.0627451, 0.0627451, 1 )
text = "YOU DIED"

[node name="TheyDied" type="RichTextLabel" parent="CanvasLayer/DeathUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.5
margin_top = -89.5
margin_right = 312.5
margin_bottom = 89.5
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.827451, 0.0627451, 0.0627451, 1 )

[node name="RespawnAsker" type="Button" parent="CanvasLayer/DeathUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -37.5
margin_right = 121.5
margin_bottom = 37.5
custom_fonts/font = SubResource( 2 )
text = "Respawn"

[node name="RespawnCountdown" type="RichTextLabel" parent="CanvasLayer/DeathUI"]
visible = false
anchor_left = 0.5
anchor_top = -1.5
anchor_right = 0.5
anchor_bottom = -1.5
margin_left = -19.5
margin_top = -42.5
margin_right = 69.5
margin_bottom = 42.5
custom_fonts/normal_font = SubResource( 3 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouDiedTimer" type="Timer" parent="CanvasLayer/DeathUI"]
one_shot = true

[node name="RespawnTimer" type="Timer" parent="CanvasLayer/DeathUI"]
wait_time = 2.0
one_shot = true

[node name="NetworkUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectMessage" type="Label" parent="CanvasLayer/NetworkUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.5
margin_top = -28.5
margin_right = 347.5
margin_bottom = 28.5
custom_fonts/font = SubResource( 4 )
align = 1

[node name="DisconnectMessageTimer" type="Timer" parent="CanvasLayer/NetworkUI"]
wait_time = 2.0
one_shot = true

[node name="ConnectMessage" type="Label" parent="CanvasLayer/NetworkUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.5
margin_top = -28.5
margin_right = 347.5
margin_bottom = 28.5
custom_fonts/font = SubResource( 4 )
align = 1

[node name="ConnectMessageTimer" type="Timer" parent="CanvasLayer/NetworkUI"]
wait_time = 2.0
one_shot = true

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 4 )]
mouse_filter = 2

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
mouse_filter = 2
[connection signal="respawn_available" from="." to="." method="_on_GameController_respawn_available"]
[connection signal="pressed" from="CanvasLayer/DeathUI/RespawnAsker" to="." method="_on_RespawnAsker_pressed"]
